--- a/tasks/cluster_logging_operator.yml
+++ b/tasks/cluster_logging_operator.yml
@@ -25,35 +25,36 @@
 
 - name: Creating the openshift-logging Namespace
   command: "oc create -f {{ target_dir }}clo-namespace.yaml"
-  when: not delete_deployment
+  when: not  delete_deployment | bool
 
 - name: Creating the Cluster Logging Operator
   command: "oc create -f {{ target_dir }}clo-og.yaml"
-  when: not delete_deployment
+  when: not  delete_deployment | bool
 
 - name: Creating the Cluster Logging Subscription object
   command: "oc create -f {{ target_dir }}clo-sub.yaml"
-  when: not delete_deployment
+  when: not  delete_deployment | bool
 
 - name: Waiting for  Cluster Logging Operator to Succeeded
   shell: |
     oc get csv --all-namespaces -n openshift-logging | grep "openshift-logging"
   register: install_status
   until: "'Succeeded' in install_status.stdout"
+  when: not  delete_deployment | bool
   retries: 60
   delay: 15
 
 - name: Deleting the Cluster Logging Operator
   command: "oc delete -f {{ target_dir }}clo-og.yaml"
-  when: delete_deployment
+  when:  delete_deployment | bool
   ignore_errors: yes
 
 - name: Deleting the Cluster Logging Subscription object
   command: "oc delete -f {{ target_dir }}clo-sub.yaml"
-  when: delete_deployment
+  when:  delete_deployment | bool
   ignore_errors: yes
 
 - name: Deleting the openshift-logging Namespace
   command: "oc delete -f {{ target_dir }}clo-namespace.yaml"
-  when: delete_deployment
+  when:  delete_deployment | bool
   ignore_errors: yes
