--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,15 +32,15 @@ es_memory_limit: 16Gi
 es_cpu_requests: 1
 es_memory_requests: 16Gi
 es_storageclassname: "gp2"
-es_storage_size: "200G"
+es_storage_size: "50G"
 kibana_replicas: "1"
-kibana_memory_limit: 1Gi
+kibana_memory_limit: 2Gi
 kibana_cpu_requests: 500m
-kibana_memory_requests: 1Gi
+kibana_memory_requests: 2Gi
 curation_memory_limit: 200Mi
 curation_cpu_requests: 200m
 curation_memory_requests: 200Mi
 curation_schedule: "*/5 * * * *"
-collection_memory_limit:  1Gi
-collection_cpu_requests: 200m
-collection_memory_requests: 1G
+collection_memory_limit:  2Gi
+collection_cpu_requests: 300m
+collection_memory_requests: 2Gi
