--- a/tasks/cluster_logging_operator.yml
+++ b/tasks/cluster_logging_operator.yml
@@ -24,36 +24,36 @@
 
 
 - name: Creating the openshift-logging Namespace
-  command: "oc create -f {{ target_dir }}clo-namespace.yaml"
+  command: "/usr/local/bin/oc create -f {{ target_dir }}clo-namespace.yaml"
   when: not delete_deployment
 
 - name: Creating the Cluster Logging Operator
-  command: "oc create -f {{ target_dir }}clo-og.yaml"
+  command: "/usr/local/bin/oc create -f {{ target_dir }}clo-og.yaml"
   when: not delete_deployment
 
 - name: Creating the Cluster Logging Subscription object
-  command: "oc create -f {{ target_dir }}clo-sub.yaml"
+  command: "/usr/local/bin/oc create -f {{ target_dir }}clo-sub.yaml"
   when: not delete_deployment
 
 - name: Waiting for  Cluster Logging Operator to Succeeded
   shell: |
-    oc get csv --all-namespaces -n openshift-logging | grep "openshift-logging"
+    /usr/local/bin/oc get csv --all-namespaces -n openshift-logging | grep "openshift-logging"
   register: install_status
   until: "'Succeeded' in install_status.stdout"
   retries: 60
   delay: 15
 
 - name: Deleting the Cluster Logging Operator
-  command: "oc delete -f {{ target_dir }}clo-og.yaml"
+  command: "/usr/local/bin/oc delete -f {{ target_dir }}clo-og.yaml"
   when: delete_deployment
   ignore_errors: yes
 
 - name: Deleting the Cluster Logging Subscription object
-  command: "oc delete -f {{ target_dir }}clo-sub.yaml"
+  command: "/usr/local/bin/oc delete -f {{ target_dir }}clo-sub.yaml"
   when: delete_deployment
   ignore_errors: yes
 
 - name: Deleting the openshift-logging Namespace
-  command: "oc delete -f {{ target_dir }}clo-namespace.yaml"
+  command: "/usr/local/bin/oc delete -f {{ target_dir }}clo-namespace.yaml"
   when: delete_deployment
   ignore_errors: yes
