--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,12 +5,12 @@
 
 - name: Install the Elasticsearch Operator
   include_tasks: elasticsearch_operator.yml
-  when: provision_elasticsearch_operator
+  when: provision_elasticsearch_operator  | bool
 
 - name: Install the Cluster Logging Operator
   include_tasks: cluster_logging_operator.yml
-  when: provision_cluster_logging_operator
+  when: provision_cluster_logging_operator | bool
 
 - name: Creating a Cluster Logging instance
   include_tasks: cluster_logging_instance.yml
-  when: provision_cluster_logging_instance
+  when: provision_cluster_logging_instance | bool
