adding pause to ansible playbook

--- a/tasks/cluster_logging_instance.yml
+++ b/tasks/cluster_logging_instance.yml
@@ -60,6 +60,7 @@
 - name: pausing for 1 minute to allow elasticsearch status to update
   pause:
     minutes: 1
+  when: not  delete_deployment | bool and use_ansible_k8s | bool
 
 - name: wait for elasticsearch all pods  to be ready
   k8s_info:
